--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
+        multiDexEnabled true
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -24,6 +25,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -52,7 +54,7 @@ repositories {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -60,47 +62,42 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
-//    implementation 'com.google.firebase:firebase-analytics:19.2.0'
-  //  implementation 'com.google.android.gms:play-services-gcm:10.2.1'
+    //    implementation 'com.google.firebase:firebase-analytics:19.2.0'
+    //  implementation 'com.google.android.gms:play-services-gcm:10.2.1'
     implementation 'com.google.android.gms:play-services-gcm:12.0.0'
     implementation 'com.pushbots:pushbots-lib:3.2.8@aar'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.nabinbhandari.android:permissions:3.8'
-
     /*def lifecycle_version = "2.1.0"
-
-    // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"*/
+     implementation 'com.android.support:multidex:1.0.3'
+        // ViewModel and LiveData
+        implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"*/
     //Retrofit And Rxjava For Services integration
-
-    implementation 'io.reactivex:rxjava:1.0.14'
+    implementation 'io.reactivex:rxjava:1.1.1'
     implementation 'io.reactivex:rxandroid:1.0.1'
     //implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.3.1'
-
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:3.4.1"
-
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     // GSON body parser
-    implementation 'com.google.code.gson:gson:2.8.2'
-
-
-
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.ajts.androidmads.SQLite2Excel:library:1.0.4'
     // Room Database For offline Storage
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
     // Live Data And ViewModel Lifecycle Components
     implementation 'android.arch.lifecycle:livedata:1.1.1'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.android.gms:play-services-location:12.0.0'
 
-    implementation "com.google.android.gms:play-services-location:12.0.0"
+    implementation files('libs/jxl.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
