--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <permission
         android:name="${applicationId}.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -49,6 +49,8 @@
 
         <activity android:name=".LoginActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".QueueActivity1" />
+        <activity android:name=".QueueActivity2" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
