--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pactera.tesko">
 
-    <uses-permission
-        android:name="android.permission.AUTHENTICATE_ACCOUNTS"
-        />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
     <permission
         android:name="${applicationId}.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -38,10 +35,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<activity android:name=".QueueAnalysisActivity"
-    android:screenOrientation="portrait"
-    android:theme="@style/AppTheme1"
-    />
+        <activity android:name=".QueueAnalysisActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1"
+            />
 
         <activity
             android:name=".MainActivity"
@@ -52,6 +49,7 @@
         <activity android:name=".QueueActivity1" />
         <activity android:name=".QueueActivity2" />
         <activity android:name=".OtpActivity" />
+        <activity android:name=".MyHrActivity" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -64,15 +62,15 @@
             </intent-filter>
         </receiver>
 
-   <!--     <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.example.gcm" />
-            </intent-filter>
-        </receiver>-->
+        <!--     <receiver
+                 android:name="com.google.android.gms.gcm.GcmReceiver"
+                 android:exported="true"
+                 android:permission="com.google.android.c2dm.permission.SEND">
+                 <intent-filter>
+                     <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                     <category android:name="com.example.gcm" />
+                 </intent-filter>
+             </receiver>-->
 
         <service
             android:name="com.pactera.gcm.GalileoListenerService"
@@ -97,11 +95,10 @@
             android:name="com.pactera.sync.LocationUpdatesService"
             android:enabled="true"
             android:exported="true"
-             />
+            />
 
 
 
     </application>
-
 
 </manifest>
